@@ -1632,9 +1632,14 @@ specifier|final
 name|boolean
 name|isMerged
 parameter_list|(
+name|SegmentInfos
+name|infos
+parameter_list|,
 name|SegmentCommitInfo
 name|info
 parameter_list|)
+throws|throws
+name|IOException
 block|{
 name|IndexWriter
 name|w
@@ -1676,23 +1681,19 @@ operator|.
 name|getDirectory
 argument_list|()
 operator|&&
-operator|(
-operator|(
-name|noCFSRatio
-operator|>
-literal|0.0
-operator|&&
-name|noCFSRatio
-operator|<
-literal|1.0
-operator|)
-operator|||
-name|maxCFSSegmentSize
-operator|<
-name|Long
+name|useCompoundFile
+argument_list|(
+name|infos
+argument_list|,
+name|info
+argument_list|)
+operator|==
+name|info
 operator|.
-name|MAX_VALUE
-operator|)
+name|info
+operator|.
+name|getUseCompoundFile
+argument_list|()
 return|;
 block|}
 comment|/** Returns current {@code noCFSRatio}.    *    *  @see #setNoCFSRatio */
