@@ -82,34 +82,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|LuceneTestCase
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|TestUtil
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
 name|TestUtil
 import|;
 end_import
@@ -120,8 +92,19 @@ specifier|public
 class|class
 name|TestTieredMergePolicy
 extends|extends
-name|LuceneTestCase
+name|BaseMergePolicyTestCase
 block|{
+DECL|method|mergePolicy
+specifier|public
+name|MergePolicy
+name|mergePolicy
+parameter_list|()
+block|{
+return|return
+name|newTieredMergePolicy
+argument_list|()
+return|;
+block|}
 DECL|method|testForceMergeDeletes
 specifier|public
 name|void
